# imgui-godot

./: .clang-format  .editorconfig  .gitignore  .gitmodules  Clicky.cs  Dear ImGui for Godot Demo.csproj  Dear ImGui for Godot Demo.sln  Hack-Regular.ttf.import  LICENSE  MPLUS2-Regular.ttf.import  MyGui.cs  MyNode.cs  MySecondNode.cs  README.md  SomeOtherNode.cs  demo.tscn  demo2.tscn  export_presets.cfg  guifont.tres  icon.svg.import  project.godot
.github/actions/import/: action.yml
.github/actions/install-godot/: action.yml
.github/actions/run-test-project/: action.yml
.github/workflows/: attach.yaml  dotnet.yml  gdext.yml  godot.yml  linux.yml  macos.yml  msvc.yml  package.yml  release.yml
Properties/: AssemblyInfo.cs
addons/imgui-godot/: Config.tscn  ImGuiGD.cs  ImGuiGDInternal.cs  ImGuiGodot.cs  ImGuiInput.cs  ImGuiLayer.cs  ImGuiLayer.tscn  ImGuiNode.cs  ImGuiPlugin.cs  ImGuiPlugin.gd  ImGuiShaderSPIRV.res  Widgets.cs  icon.tres  imgui-icon.png.import  plugin.cfg
addons/imgui-godot/ImGuiGodot/: ImGuiAPI.cs  ImGuiController.cs  ImGuiEditorPlugin.cs  ImGuiExtensions.cs  ImGuiGD.cs  ImGuiGDInternal.cs  ImGuiLayer.cs  ImGuiSync.cs  Internal.cs  InternalCanvasRenderer.cs  InternalDummyRenderer.cs  InternalFontBuilder.cs  InternalRdRenderer.cs  InternalViewports.cs  InternalVkRenderer.cs  Widgets.cs
addons/imgui-godot/ImGuiGodot/Internal/: BackendNative.cs  BackendNet.cs  CanvasRenderer.cs  DummyRenderer.cs  Fonts.cs  IBackend.cs  IPublicInterface.cs  IRenderer.cs  Input.cs  InputLocal.cs  PublicInterfaceNative.cs  PublicInterfaceNet.cs  RdRenderer.cs  RdRendererThreadSafe.cs  State.cs  Util.cs  Viewports.cs
addons/imgui-godot/data/: ImGuiShaderSPIRV.tres
addons/imgui-godot/scripts/: ImGuiConfig.gd  ImGuiConfigNode.gd  ImGuiFont.gd  ImGuiPlugin.gd  ImGuiRoot.gd  ImGuiSignaler.gd
data/: Hack-Regular.ttf.import  MPLUS2-Regular.ttf.import  MyTool.cs  buttongroup.tres  demo.tscn  demo2.tscn  gui_in_3d.tscn  gui_panel_3d.tscn  icon.svg.import  robot_eye.tres  sample_config.tres
doc/cpp-demo/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
doc/cpp-demo/MyGame/: Button1.cs  MyGame.csproj  MyGame.sln  demoext.gdextension  icon.svg.import  main.tscn  project.godot
doc/cpp-demo/src/: CMakeLists.txt  MyCppNode.cpp  MyCppNode.h  main.cpp  mycppnode.cpp  mycppnode.h
doc/cpp-demo/test/: test.cpp
doc/examples/CSharpGameProject/: CSharpGameProject.csproj  CSharpGameProject.sln  Globals.cs  Main.cs  README.md  Sprite.cs  addons.json  export_presets.cfg  icon.svg.import  main.tscn  project.godot
doc/examples/GDExt/: CMakeLists.txt  README.md  SConstruct
doc/examples/GDExt/project/: Hack-Bold.ttf.import  Hack-Italic.ttf.import  Hack-Regular.ttf.import  addons.json  example.gdextension  icon.svg.import  imgui_config.tres  main.tscn  project.godot  robot_eye.tres
doc/examples/GDExt/src/: example.cpp  example.h  gdmarkdown.cpp  gdmarkdown.h  register_types.cpp  register_types.h
doc/examples/GDExtRust/: Cargo.toml  build.rs  imconfig.h
doc/examples/GDExtRust/project/: example.gdextension  icon.svg.import  main.tscn  project.godot
doc/examples/GDExtRust/src/: lib.rs
doc/examples/GdsDemo/: README.md  addons.json  demo.gd  icon.svg.import  main.tscn  project.godot
doc/examples/GdsGameProject/: README.md  export_presets.cfg  icon.svg.import  main.gd  main.tscn  project.godot  sprite.gd
doc/examples/Module/: README.md
doc/examples/Module/modules/mymod/: SCsub  mynode.cpp  mynode.h  register_types.cpp  register_types.h
doc/examples/Module/project/: icon.svg.import  main.tscn  project.godot
doc/examples/ToolCSharp/: README.md  SpriteTool.cs  ToolCSharp.csproj  ToolCSharp.sln  icon.svg.import  main.tscn  project.godot
doc/examples/ToolScript/: icon.svg.import  main.tscn  project.godot  sprite_tool.gd
doc/test/: addons.json  config_scale2x.tres  export_presets.cfg  icon.svg.import  main.gd  main.tscn  project.godot
doc/test/csbench/: BenchCanvas.cs  BenchRid.cs  Program.cs  csbench.csproj  csbench.sln
doc/test/csharp/: Main.cs  addons.json  main.tscn  project.godot  test.csproj  test.sln
doc/test/gdscript/: main.gd  project.godot  test_base.gd
gdext/: .clang-format  CMakeLists.txt  SConstruct  gds_bindings.py  imgui-godot-native.sln  imgui-godot-native.vcxproj  vcpkg-macos.sh  vcpkg.json
gdext/include/: ImGuiGD.h  imconfig-godot.h  imgui-godot.h
gdext/proj/: control.tscn  icon.svg.import  new_script.gd  project.godot
gdext/proj/addons/imgui-godot-native/: ImGuiGodot.tscn  imgui-godot-native.gdextension  imgui-godot.tscn  plugin.cfg  plugin.gd
gdext/proj/addons/imgui-godot-native/include/: ImGuiGD.h
gdext/samples/project/: icon.svg.import  main.tscn  project.godot
gdext/samples/sample-plugin/: plugin.cfg  plugin.gd
gdext/samples/sample_gdext/: SConstruct
gdext/samples/sample_gdext/src/: ext_node.cpp  ext_node.h  register_types.cpp  register_types.h
gdext/samples/sample_module/modules/another/: SCsub  another_node.cpp  another_node.h  register_types.cpp  register_types.h
gdext/samples/sample_module/modules/sample/: SCsub  register_types.cpp  register_types.h  sample_node.cpp  sample_node.h
gdext/scripts/: gds_bindings.py  vcpkg-macos.sh
gdext/src/: CMakeLists.txt  CanvasRenderer.cpp  CanvasRenderer.h  Context.cpp  Context.h  DummyRenderer.h  Fonts.cpp  Fonts.h  GdsCache.cpp  GdsCache.h  ImGuiAPI.cpp  ImGuiAPI.h  ImGuiController.cpp  ImGuiController.h  ImGuiControllerHelper.cpp  ImGuiControllerHelper.h  ImGuiGD.cpp  ImGuiGD.h  ImGuiGodot.cpp  ImGuiGodot.h  ImGuiGodotHelper.cpp  ImGuiGodotHelper.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayerHelper.cpp  ImGuiLayerHelper.h  ImGuiRoot.cpp  ImGuiRoot.h  ImGuiSync.cpp  ImGuiSync.h  Input.cpp  Input.h  InputLocal.cpp  InputLocal.h  RdRenderer.cpp  RdRenderer.h  RdRendererThreadSafe.cpp  RdRendererThreadSafe.h  Renderer.h  ShortTermCache.cpp  (+6 more)
gdext/vcpkg-overlay/godot-cpp/: portfile.cmake  vcpkg.json
src/: Clicky.cs  MyNode.cs  MySecondNode.cs  MyTool.cs  ThirdNode.cs  ViewportArea.cs  gui_3d.gd
